name:                groundhog-utils
version:             0.2.2
synopsis:            Some utilities that are often useful when using Groundhog
license:             BSD3
license-file:        LICENSE
author:              Ozgun Ataman
maintainer:          ozgun.ataman@soostone.com
category:            Database
build-type:          Simple
cabal-version:       >=1.10

library
  exposed-modules:
    Database.Groundhog.Utils
    Database.Groundhog.Utils.Postgresql
  build-depends:       
      aeson                >= 0.7
    , base                 >= 4.6
    , bytestring           >= 0.10
    , cereal               >= 0.3
    , data-default         >= 0.5
    , groundhog            >= 0.6
    , groundhog-postgresql >= 0.6
    , groundhog-th         >= 0.6
    , lens                 >= 3.9
    , safecopy             >= 0.8
    , tagged
  hs-source-dirs:      src
  default-language:    Haskell2010
